# todo

./: .gitignore  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  buildozer.spec  examples.py  main.py  poc.py  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-mobile.txt  requirements-web.txt  requirements.txt  setup.cfg  setup.py
.devcontainer/: alpine.Dockerfile  devcontainer.json  ubuntu.Dockerfile
.github/workflows/: ci.yml  code-quality.yml  tests.yml
tests/: __init__.py  conftest.py  test_cli.py  test_models.py  test_parser.py  test_storage.py
todo_cli/: __init__.py
todo_core/: __init__.py  models.py  parser.py  storage.py
todo_mobile/: __init__.py  app.py
todo_web/: __init__.py  app.py
