# Build configuration for pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-app"
version = "0.1.0"
description = "A natural language todo app with temporal awareness"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Todo App Team", email = "team@todo-app.local"}
]
keywords = ["todo", "task", "natural-language", "temporal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
web = [
    "streamlit>=1.28.0",
]
mobile = [
    "kivy>=2.2.1",
    "kivy-garden>=0.1.5",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/todo-app"
Repository = "https://github.com/yourusername/todo-app.git"
Issues = "https://github.com/yourusername/todo-app/issues"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=todo_core --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
